Add share button

--- a/matchday/2024-05-25/assets/AssetManifest.json
+++ b/matchday/2024-05-25/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/fields.jpg":["assets/fields.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/fields.jpg":["assets/fields.jpg"],"assets/qr.jpg":["assets/qr.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
